# GraphicsProgramming-Raytracer

./: .gitignore  CMakeLists.txt  README.md
project/: CMakeLists.txt
project/src/: BRDFs.h  BVH.h  Camera.h  ColorRGB.h  Light.h  Material.h  MathHelpers.h  Maths.h  Matrix.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Timer.cpp  Timer.h  Utils.h  Vector3.h  Vector4.h  main.cpp
project/src/core/: ColorRGB.h  MathHelpers.h  Matrix.cpp  Matrix.h  Timer.cpp  Timer.h  Utils.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
project/src/rendering/: BRDFs.h  BVH.h  Light.h  Material.h  Renderer.cpp  Renderer.h
project/src/scene/: Camera.h  DataTypes.h  Scene.cpp  Scene.h  SceneManager.h
project/tests/: CMakeLists.txt  UnitTests.cpp
